--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "type": "module",
   "main": "index.js",
-  "scripts": { 
+  "scripts": {
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "Jahid Hasan",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prettier": "^3.3.3"
   }
 }
